# epen

./: .gitignore  CMakeLists.txt  README.md
cvccsample/: CMakeLists.txt  main.cpp
opencvsample/: CMakeLists.txt  DisplayImage.cpp
src/: ImageProcessor.cpp  ImageProcessor.hpp  InkAnimator.cpp  InkAnimator.hpp  main.cpp  sfmlwindow-start.cpp
thresholdsample/: CMakeLists.txt  main.cpp
